--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 ---
-layout: default
+layout: base
 title: ryanjhouston.com
 ---
+
+<div id="content" class="span12">
+  {% for page in paginator.posts %}
+    {% include post_summary.html %}
+  {% endfor %}
+
+  {% if paginator.next_page or paginator.previous_page %}
+    {% include paginator.html %}
+  {% endif %}
+</div>
+
