--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,9 @@ layout: default
 {% for category in site.categories %}
   <section class="category-listing">
     {% assign category_name = category | first %}
-    <h2><a href="#{{ category_name }}">{{ category_name }}</a></h2>
+    <h2 id="{{category_name}}">
+      <a href="#{{ category_name }}">{{ category_name }}</a>
+    </h2>
     <ul>
     {% for posts in category %}
       {% for post in posts %}
